==================
[1843631] "Browse to Icon" now correctly shown using new Toolbar.
[1841525] Increasing the number of passwords saved no longer deletes the
existing Password History.
[] Pressing a character in the List view will now jump to the next entry
with text beginning with that character in the second column. This
is a change from previous behaviour which only looked in the first column,
now occupied by the icon.
[] Allow Expand/Collapse for R/O databases via toolbar.
[] Set focus to new view on switching between Tree <-> List views.
[] Update toolbar when view changes (List <-> Tree)
[] Set PWS title when opening a database at startup
[] Allow List view to process all characters e.g. Page Up/Down, Home, End,
Arrows etc.

Changes to Existing Features in 3.12
====================================
[1846688] When generating a new password, it is no longer displayed in
a separate window for approval. If you want to genrate another
password, just click on Generate again. If you want to revert to the
existing password when editing an entry, just click on Cancel.

New Features for 3.12
=======================
[] Several entries may be shorcuts to a single entry, sharing all its
data (c.f. aliases only share passwords). See online help for details.
Bitmaps on menus.
[1842449] Implement standard F3 for repeat Find shortcut.

Bugs fixed in 3.11.1
====================
[] No longer crashes when pulling down Edit menu in List view with no
entry selected.
[1837534] Autotype handles tab correctly when typing to Internet
Explorer.
[] Copy Username and Copy Password new toolbar icons swapped back.

Changes to Existing Features in 3.11.1
======================================
[] You can now check for newer version via Help->About
[] List view displays an icon in each row showing the type of entry

New Features for 3.11
=====================
[1765240] Add "Clear clipboard" item to tray icon context menu.
[1727768] Copy URL to clipboard added to menus (Ctrl+Alt+L).