@@ -68,6 +68,8 @@ DECLARE_HANDLE(HDROP);
 #define TIMER_CHECKLOCK 0x04
 // timer event number used to support lock on user-defined timeout
 #define TIMER_USERLOCK 0x05
+// timer event number used to support Find in PWListCtrl when icons visible
+#define TIMER_FIND 0x06
 
 // Hotkey value ID
 #define PWS_HOTKEY_ID 5767
@@ -130,7 +132,7 @@ public:
               const int subgroup_function);
 
   // Used by ListCtrl KeyDown
-  bool FindNext(const CString &cs_char);
+  bool IsImageVisible() {return m_bImageInLV;}
 
   // Count the number of total entries.
   size_t GetNumEntries() const {return m_core.GetNumEntries();}
@@ -546,6 +548,7 @@ private:
   typedef MapUICommandTable::const_iterator MapUICommandTableConstIter;
   MapUICommandTable m_MapUICommandTable;
 
+  // Images in List View
   bool m_bImageInLV;
 };
 
