@@ -19,14 +19,18 @@ public:
   {m_pDbx = (DboxMain *)pWnd;}
 
   LRESULT OnCharItemlist(WPARAM wParam, LPARAM lParam);
+  bool FindNext(const CString &cs_find, const int iSubItem);
 
 protected:
   //{{AFX_MSG(CPWListCtrl)
   afx_msg void OnDestroy();
+  afx_msg void OnTimer(UINT_PTR nIDEvent);
   //}}AFX_MSG
 
   DECLARE_MESSAGE_MAP()
 
 private:
   DboxMain *m_pDbx;
+  CString m_csFind;
+  UINT_PTR m_FindTimerID;
 };
