@@ -16,13 +16,16 @@ existing Password History.
 [] Pressing a character in the List view will now jump to the next entry
 with text beginning with that character in the second column. This
 is a change from previous behaviour which only looked in the first column,
-now occupied by the icon.
+now occupied by the icon.  This now follows MS's approach that if characters
+are typed fast enough (within 1 second), it will treat them as a string
+i.e. 'a' followed by 'b' will look for entry starting 'ab' etc.
 [] Allow Expand/Collapse for R/O databases via toolbar.
 [] Set focus to new view on switching between Tree <-> List views.
 [] Update toolbar when view changes (List <-> Tree)
 [] Set PWS title when opening a database at startup
 [] Allow List view to process all characters e.g. Page Up/Down, Home, End,
 Arrows etc.
+[] Fix program abend on clicking CompareResults dialog header.
 
 Changes to Existing Features in 3.12
 ====================================
